src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <inlineHelpText>HEY GIVE ME DEVOPS GALA</inlineHelpText>
        <label>Access DEVOPS GALA#</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <defaultValue>&quot;Demonstrating Copado deployment in red Org&quot;</defaultValue>
        <description>Description was missing, added in field &quot;Branch&quot;</description>
        <inlineHelpText>Help Text -- HEY DEVOPS WORLD - Celebrating deployment automation via Copado.</inlineHelpText>
        <label>Branch_WE_ARE_SUCCESS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favorite_Colors__c</fullName>
        <description>Preferred colors</description>
        <label>Favorite Colors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Purple</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Copper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoyaltyPoints__c</fullName>
        <description>Loyalty Program Points</description>
        <label>LoyaltyPoints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RenewalDate__c</fullName>
        <description>Renewal Date</description>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Top_Level__c</fullName>
        <inlineHelpText>top level in the partner hierarchy</inlineHelpText>
        <label>Top Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Standard_Account</fullName>
        <active>true</active>
        <label>Standard Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>